--- a/app/views/culture/explore.erb
+++ b/app/views/culture/explore.erb
@@ -203,7 +203,7 @@
                                 <span class="fa fa-angle-down dsArrow"></span>
                             </a>
                             <ul class="dropdown-menu dropdown-select full" role="menu">
-                                <li class="active"><input type="radio" name="pType" value="all" checked><a href="#" name="aType">모두 보기</a></li>
+                                <li><input type="radio" name="pType" value="all"><a href="#" name="aType">모두 보기</a></li>
                                 <li><input type="radio" name="pType" value="0"><a href="#" name="aType">뮤지컬</a></li>
                                 <li><input type="radio" name="pType" value="1"><a href="#" name="aType">연극</a></li>
                                 <li><input type="radio" name="pType" value="2"><a href="#" name="aType">콘서트</a></li>
@@ -211,7 +211,6 @@
                                 <li><input type="radio" name="pType" value="4"><a href="#" name="aType">전시</a></li>
                                 <li><input type="radio" name="pType" value="5"><a href="#" name="aType">스포츠</a></li>
                                 <li><input type="radio" name="pType" value="6"><a href="#" name="aType">버스킹</a></li>
-                                <li><input type="radio" name="pType" value="7"><a href="#" name="aType">아마추어 동아리</a></li>
                                 <li><input type="radio" name="pType" value="8"><a href="#" name="aType">기타</a></li>
                             <!--공연카테고리 토글다운 끝-->
                             </ul>
