--- a/app/views/culture/index.html.erb
+++ b/app/views/culture/index.html.erb
@@ -15,7 +15,9 @@
     <!--로고 들어갈 곳-->
     
     <div class="home-header"> 
-        <div class="home-logo osLight"> <!--로고--> 뭐한대?</div>
+        <div class="home-logo osLight"> <a href="/"><img src="/images/mylogo.png" width="100px" height="140px"></a></div>
+    </div>
+    <div class="home-header">
         <a href="#" class="home-navHandler visible-xs"><span class="fa fa-bars"></span></a>
         <div class="home-nav">
             <ul>
@@ -282,8 +284,8 @@
                     <div class="field">
                         <div class="form-group"> 
                             <div class="btn-group-justified">
-                                <button type="button" class="btn btn-lg btn-yellow" id="select_viewer" style="width: 48%; display: inline;" onclick="setViewer()">관객</button>
-                                <button type="button" class="btn btn-lg btn-red" id="select_performer" style="width: 48%; display: inline;" onclick="setPerformer()">공연팀</button>
+                                <button type="button" class="btn btn-lg btn-blue" id="select_viewer" style="width: 50%; display: inline;" onclick="setViewer()">관객</button>
+                                <button type="button" class="btn btn-lg btn-info" id="select_performer" style="width: 50%; display: inline;" onclick="setPerformer()">공연팀</button>
                             </div>
                         </div>
                     </div>
