--- a/app/views/culture/introduce.erb
+++ b/app/views/culture/introduce.erb
@@ -64,7 +64,9 @@
     <!--로고 들어갈 곳-->
     
     <div class="home-header"> 
-        <div class="home-logo osLight"> <!--로고--> 뭐한대?</div>
+        <div class="home-logo osLight"> <a href="/"><img src="/images/mylogo.png" width="100px" height="140px"></a></div>
+    </div>
+    <div class="home-header">
         <a href="#" class="home-navHandler visible-xs"><span class="fa fa-bars"></span></a>
         <div class="home-nav">
             <ul>
