--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,8 +2,9 @@
 <div class="row">
   <div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3 col-lg-offset-4 col-lg-4">
     <br><br>
-    <h2>회원가입</h2>
-    <br>
+    
+    <h2> <a href="/"><img src="/images/mylogo2.png" width="50px" height="90px"></a> 회원가입</h2>
+
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {id: "sign_up_form"}) do |f| %>
       <%= devise_error_messages! %>
     
