--- a/app/views/culture/profile.erb
+++ b/app/views/culture/profile.erb
@@ -272,7 +272,14 @@
             <div class="row">
                 <% @pfid.newpfs.each do |p| %>
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                    <a href="/culture/single/<%=p.id%>" class="card">
+                    <a href="/culture/single/<%=
+                    
+                    
+                    
+                    
+                    
+                    
+                    p.id%>" class="card">
                         <div class="figure">
                             <img src="<%=p.pf_image%>" alt="image" width="200px" height="200px">
                             <div class="figView"><span class="icon-eye"></span></div>
