--- a/app/views/culture/_newpf.html.erb
+++ b/app/views/culture/_newpf.html.erb
@@ -9,7 +9,7 @@
             </div>
             <h2><%= newpf.pf_title %></h2>
             <br>
-            <div class="cardAddress"><span class="fa fa-clock-o">  </span> 날짜 및 햣 시간 : <%= newpf.pf_time_start.strftime("%Y/%m/%d %H:%M") %>~<%= newpf.pf_time_end.strftime("%Y/%m/%d %H:%M") %> </span></div>
+            <div class="cardAddress"><span class="fa fa-clock-o">  </span> 날짜 및 시간 : <%= newpf.pf_time_start.strftime("%Y/%m/%d %H:%M") %>~<%= newpf.pf_time_end.strftime("%Y/%m/%d %H:%M") %> </span></div>
             <div class="cardAddress"><span class="icon-pointer">  </span> 위치 : <%= newpf.pf_address_sub %> </div>
             <div class="cardAddress"><span class="fa fa-child">  </span> 위치 설명 : <%= newpf.pf_add_br %> </div>
             <div class="cardAddress"> 장르 : <%= newpf.pf_kind %> </div>
