--- a/app/views/culture/js/_app.js.erb
+++ b/app/views/culture/js/_app.js.erb
@@ -113,17 +113,17 @@
                                         //'<div class="propAddress">' + prop.address + '</div>' +
                                     '</div>' +
                                     
-                                    '<br>' +
+
                                     '<br>' +
                                     '<ul class="propFeat">' +
                                         //'<li><span class="fa fa-moon-o"></span> ' + prop.bedrooms + '</li>' +
                                         //'<li><span class="icon-drop"></span> ' + prop.bathrooms + '</li>' +
-                                        '<li><span class="icon-frame"></span> ' + prop.area + '</li>' +
+                                        '<li><span class="icon-pin"></span> ' + prop.area + '</li>' +
                                     '</ul>' +
                                     '<div class="clearfix"></div>' +
                                     '<div class="infoButtons">' +
-                                        '<a class="btn btn-sm btn-round btn-gray btn-o closeInfo">Close</a>' +
-                                        '<a href="/culture/single/' + prop.id + '" class="btn btn-sm btn-round btn-green viewInfo">View</a>' +
+                                        '<a class="btn btn-sm btn-round btn-gray btn-o closeInfo">닫기</a>' +
+                                        '<a href="/culture/single/' + prop.id + '" class="btn btn-sm btn-round btn-green viewInfo">자세히 보기</a>' +
                                     '</div>' +
                                  '</div>';
 
