--- a/app/views/culture/index.html.erb
+++ b/app/views/culture/index.html.erb
@@ -82,7 +82,7 @@
                             <div class="priceCap osLight"><span> <%=p.pf_title%> </span></div>
                             
                             <div class="figType">공연 중 </div>
-                            <h3 class="osLight"><%=p.pf_time_start.strftime("%Y/%m/%d %H:%M") %>~<%=p.pf_time_end.strftime("%Y/%m/%d %H:%M")%> <br> <%=p.pf_address_sub %></h3>
+                            <h3 class="osLight"><%=p.pf_time_start.strftime("%m/%d %H:%M") %>~<%=p.pf_time_end.strftime("%m/%d %H:%M")%> <br> <%=p.pf_address_sub %></h3>
                             
                             <div class="like_cap osLight">
                                 <span class="icon-heart"></span>
