--- a/app/views/culture/add.erb
+++ b/app/views/culture/add.erb
@@ -10,7 +10,7 @@
     <div class="logo">
         <a href="/">
             <span class="fa fa-home marker"></span>
-            <span class="logoText">홈</span>
+            <span class="logoText">홈으로</span>
         </a>
     </div>
     <a href="#" class="navHandler"><span class="fa fa-bars"></span></a>
@@ -334,6 +334,7 @@
     </div>
 </div>
 <script type="text/javascript">
+ 
   $(document).ready(function() {
     $.when(
       $.getScript( "/datetimepicker/jquery.datetimepicker.js" ),
