--- a/app/views/culture/js/_app.js.erb
+++ b/app/views/culture/js/_app.js.erb
@@ -58,7 +58,7 @@
                 lat : "<%= a.pf_add_lat %>",
                 lng : "<%= a.pf_add_lng %>"
             },
-            markerIcon : "marker-green.png",
+            markerIcon : "marker-new.png",
             id : "<%=a.id%>"
         })
     <% end %>
