--- a/app/views/culture/js/_single_app.js.erb
+++ b/app/views/culture/js/_single_app.js.erb
@@ -49,7 +49,7 @@
             lat : "<%=@pid.pf_add_lat%>", 
             lng : "<%=@pid.pf_add_lng%>"
         },
-        markerIcon : "marker-green.png",
+        markerIcon : "marker-new.png",
         id : "<%=@pid.id%>"
     }];
     
