--- a/app/views/culture/explore.erb
+++ b/app/views/culture/explore.erb
@@ -11,7 +11,7 @@
     <div class="logo">
         <a href="/">
             <span class="fa fa-home marker"></span>
-            <span class="logoText">홈</span>
+            <span class="logoText">홈으로</span>
         </a>
     </div>
     <a href="#" class="navHandler"><span class="fa fa-bars"></span></a>
