--- a/app/views/culture/single.erb
+++ b/app/views/culture/single.erb
@@ -10,7 +10,7 @@
     <div class="logo">
         <a href="/">
             <span class="fa fa-home marker"></span>
-            <span class="logoText">홈
+            <span class="logoText">홈으로
             </span>
         </a>
     </div>
