--- a/app/views/culture/vieweralarm.erb
+++ b/app/views/culture/vieweralarm.erb
@@ -17,7 +17,7 @@
             
             
             
-            <span class="logoText">홈</span>
+            <span class="logoText">홈으로</span>
         </a>
     </div>
     <a href="#" class="navHandler"><span class="fa fa-bars"></span></a>
