--- a/app/views/culture/profile.erb
+++ b/app/views/culture/profile.erb
@@ -215,7 +215,7 @@
             <div class="row">
                 <div class="col-md-6 pb20">
                     <div class="pc-about osLight">팀 이름</div>
-                    <div class="pb20"><%= @pfid.team_name %></div>
+                    <div class="pb20"><%= @pfid.team_name %>  </div>
                 </div>
         
             
@@ -234,22 +234,23 @@
                 
                 <div class="col-md-6 pb20">
                     <div class="pc-about osLight"> SNS </div>
-                    <div class="pb20"><div class="pc-social"><a href="<%= @pfid.team_fb %>" class="btn btn-icon btn-facebook"><span class="fa fa-facebook"></span></a> <a href="<%= @pfid.team_tw %>" class="btn btn-icon btn-twitter"><span class="fa fa-twitter"></span></a> <a href="<%= @pfid.team_blog %>" class="btn btn-icon btn-google"><span class="fa fa-google-plus"></span></a></div></div>
+                    <div class="pb20"><div class="pc-social"><a href="<%= @pfid.team_fb %>" class="btn btn-icon btn-facebook"><span class="fa fa-facebook"></span></a> <a href="<%= @pfid.team_tw %>" class="btn btn-icon btn-twitter"><span class="fa fa-twitter"></span></a> <a href="<%= @pfid.team_blog %>" class="btn btn-icon btn-google"><span class="fa fa-google-plus"></span></a> </div></div>
                 </div>
                 
             </div>
             <br>
 
             <div class="row">
-                <div class="col-md-6 pb20">
+                <div class="col-md-12 pb20">
                     <div class="pc-about osLight">팀 소개</div>
                     <div class="pb20"> <%= @pfid.team_info %></div>
                 </div>
+            </div>
                 
                 
+            <br>    
                 
-                
-                
+           <div class="row"> 
                 <div class="col-md-6 pb20">
                     
                     <div class="pb20"><a id="profile_like" class="btn btn-o btn-danger" data-toggle="tooltip" data-tooltip-class="magenta" data-placement="right" title="" data-original-title="Tooltip on right">관심 아티스트 등록</a></div>
