--- a/app/views/culture/js/_single_app.js.erb
+++ b/app/views/culture/js/_single_app.js.erb
@@ -92,24 +92,27 @@
             var infoboxContent = '<div class="infoW">' +
                                     '<div class="propImg">' +
                                         '<img src="' + prop.image + '">' +
+                                        //'<div class="propBg">' +
+                                        //    '<div class="propPrice">' + prop.price + '</div>' +
+                                        //    '<div class="propType">' + prop.type + '</div>' +
+                                        //'</div>' +
                                     '</div>' +
                                     '<div class="paWrapper">' +
                                         '<div class="propTitle">' + prop.title + '</div>' +
+                                        //'<div class="propAddress">' + prop.address + '</div>' +
                                     '</div>' +
-                                    '<div class="propRating">' +
-                                        '<span class="fa fa-star"></span>' +
-                                        '<span class="fa fa-star"></span>' +
-                                        '<span class="fa fa-star"></span>' +
-                                        '<span class="fa fa-star"></span>' +
-                                        '<span class="fa fa-star-o"></span>' +
-                                    '</div>' +
+                                    
+
+                                    '<br>' +
                                     '<ul class="propFeat">' +
-                                        '<li><span class="icon-frame"></span> ' + prop.area + '</li>' +
+                                        //'<li><span class="fa fa-moon-o"></span> ' + prop.bedrooms + '</li>' +
+                                        //'<li><span class="icon-drop"></span> ' + prop.bathrooms + '</li>' +
+                                        '<li><span class="icon-pin"></span> ' + prop.area + '</li>' +
                                     '</ul>' +
                                     '<div class="clearfix"></div>' +
                                     '<div class="infoButtons">' +
-                                        '<a class="btn btn-sm btn-round btn-gray btn-o closeInfo">Close</a>' +
-                                        '<a href="' + prop.id + '" class="btn btn-sm btn-round btn-green viewInfo">View</a>' +
+                                        '<a class="btn btn-sm btn-round btn-gray btn-o closeInfo">닫기</a>' +
+                                        '<a href="/culture/single/' + prop.id + '" class="btn btn-sm btn-round btn-green viewInfo">자세히 보기</a>' +
                                     '</div>' +
                                  '</div>';
 
