--- a/app/views/culture/add_update.erb
+++ b/app/views/culture/add_update.erb
@@ -190,6 +190,7 @@
                             <input type="string" class="form-control" name="new_pf_title" value="<%= @pid.pf_title %>">
                         </div>
                     </div>
+                    <link rel="stylesheet" type="text/css" href="/datetimepicker/jquery.datetimepicker.css"/ >
                     <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6">
                         <label for="pf_time_start">시작 시간</label>
                         <input id="pf_datetime_input_start" type="text" class="form-control" required>
