--- a/app/views/culture/index.html.erb
+++ b/app/views/culture/index.html.erb
@@ -2,21 +2,21 @@
 <script>
    $(document.body).attr("class", "notransition no-hidden"); 
 </script>
-<!-- 슬라이드 이미지 들어갈 곳-->
-    <div id="hero-container">
 
-        <div id="yoyo">
-            <div id="heyhey">
-                <video preload="true" autoplay="autoplay" loop="loop" volume="0">
-                    <source src="https://s3-ap-southeast-1.amazonaws.com/likebucket/2.webm" type="video/webm">
-            </div>
+<!-- 슬라이드 이미지 들어갈 곳-->
+<div id="hero-container">
+    <div id="yoyo">
+        <div id="heyhey">
+            <video preload="true" autoplay="autoplay" loop="loop" volume="0">
+            <source src="https://s3-ap-southeast-1.amazonaws.com/likebucket/2.webm" type="video/webm">
         </div>
+    </div>
     
     <!--로고 들어갈 곳-->
-    
     <div class="home-header"> 
         <div class="home-logo osLight"> <a href="/"><img src="/images/mylogo5.png" width="200px" height="50px"></a></div>
     </div>
+    <!-- 상단 Navbar -->
     <div class="home-header">
         <a href="#" class="home-navHandler visible-xs"><span class="fa fa-bars"></span></a>
         <div class="home-nav">
@@ -52,24 +52,20 @@
             </ul>
         </div>
     </div>
+    <!-- END 상단 Navbar -->
+    <!-- 메인 슬라이드 -->
     <div class="home-caption" style="background:rgba( 0, 0, 0, 0.7)">
         <div class="home-title">오늘은 뭐한대?</div>
         <div class="home-subtitle">내 주변에서 열리는 <%= Newpf.count %>개의 문화정보를 만나보세요</div>
         <a href="culture/introduce" class="btn btn-lg btn-yellow">뭐한대?! 이용방법</a>
         <br><br>
     </div>
+    <!-- END 메인 슬라이드 -->
 </div>
 
-<!--중간 띠 주석처리 div class="highlight">
-    <div class="h-title osLight">공연정보를 알아보세요</div>
-    <div class="h-text osLight"> 쉽게등록하고 쉽게 홍보하세요</div>
-</div-->
-
-<!--내용-->
-
+<!-- 인기 문화 -->
 <div class="home-wrapper">
     <div class="home-content">
-        
         <h2 class="osLight">이번 주 인기 문화</h2>
         <div class="row pb40">
             <% @popular_pfs.each do |p| %>
@@ -88,33 +84,24 @@
                                 <span class="icon-heart"></span>
                                 <span id="like_num"><%=p.get_likes.size%></span>
                             </div>
-                            <!--별점 들어갈 곳-->
-                            <!-- <ul class="rating">
-                                <li><span class="fa fa-star star-1"></span></li>
-                                <li><span class="fa fa-star star-2"></span></li>
-                                <li><span class="fa fa-star star-3"></span></li>
-                                <li><span class="fa fa-star-o star-5"></span></li>
-                                <li><span class="fa fa-star-o star-5"></span></li>
-                            </ul> -->                   
                         </div>
                     </a>
                 </div>
             <% end %>
-        <!-- END 인기 문화 -->
         </div>
     </div>
 </div>
-      
+<!-- END 인기 문화 -->
+
 <div class="highlight">
     <div class="h-title osLight"> 내 주변에는 놀랍도록 많은 문화가 존재하고 있습니다   </div>
     <br> <br> 
     <div class="h-text osLight"> 쉽게 등록하고, 쉽게 정보를 얻을 수 있습니다</div>
 </div>
 
-<!--내용-->
+<!-- 베스트 기대 팀 -->
 <div class="home-wrapper">
     <div class="home-content">
-        
         <h2 class="osLight">오늘의 베스트 기대 팀</h2>
         <div class="row pb40">
             <% @popular_artists.each do |p| %>
@@ -131,25 +118,17 @@
                             <span class="icon-heart"></span>
                             <span id="like_num"><%=p.get_likes(:vote_scope => 'interest').size%></span>
                         </div>
-                        <!--별점 들어갈 곳
-                        <ul class="rating">
-                            <li><span class="fa fa-star star-1"></span></li>
-                            <li><span class="fa fa-star star-2"></span></li>
-                            <li><span class="fa fa-star star-3"></span></li>
-                            <li><span class="fa fa-star star-4"></span></li>
-                            <li><span class="fa fa-star-o star-5"></span></li>
-                        </ul>-->
                     </div>
                 </a>
             </div>
             <% end %>
         </div>
-        <!-- END 베스트 기대 팀 -->
+        
     </div>
 </div>
+<!-- END 베스트 기대 팀 -->
 
 <!-- Footer -->
-
 <div class="home-footer">
     <div class="home-wrapper">
         <div class="row">
@@ -158,7 +137,6 @@
                     <div class="osLight footer-header">뭐한대? 이야기</div>
                     <ul class="footer-nav pb20">
                         <li><a href="/culture/introduce"> 소개 </a></li>
-    
                     </ul>
                 </center>
             </div>
@@ -168,8 +146,6 @@
                     <ul class="footer-nav pb20">
                         <li><a href="/culture/explore">공연 모아보기</a></li>
                         <li><a href="/culture/pfadd">공연자 모아보기</a></li>
-                        
-    
                     </ul>
                 </center>
             </div>
@@ -188,10 +164,11 @@
         <div class="copyright">© 뭐한대?!, 2015 베타서비스.</div>
     </div>
 </div>
+<!-- END Footer -->
 
 
 
-<!--로그인 팝업 뜨는거 -->
+<!--로그인 팝업 Modal -->
 <div class="modal fade" id="signin" role="dialog" aria-labelledby="signinLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
@@ -228,17 +205,15 @@
                   </div>
                 </div>
               <% end %>
-              
-              
-              
             </div>
         </div>
     </div>
 </div>
+<!-- END 로그인 팝업 Modal -->
 
 
 
-<!--회원가입 뜨는거-->
+<!-- 회원가입 팝업 Modal -->
 <div class="modal fade" id="signup" role="dialog" aria-labelledby="signupLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
@@ -324,6 +299,8 @@
         </div>
     </div>
 </div>
+<!-- END 회원가입 팝업 Modal -->
+
 <script type="text/javascript">
 $(document).ready(function(){
     $.when(
@@ -339,6 +316,5 @@ $(document).ready(function(){
     ).done(function(){
         $.getScript('/js/home.js');
     });
-    
 });
 </script>
